<resources>
    <string name="app_name">Scan And Count</string>
    <string name="numberLabelText">Menge</string>
    <string name="dataLabelText">Daten</string>
    <string name="btnCancelText">Verwerfen</string>
    <string name="btnSaveText">Speichern</string>
    <string name="btnListCaption">Liste</string>
    <string name="btnClearLabel">Clear</string>

    <string name="txtYesNoDialogTitle">Bitte bestätigen</string>
    <string name="txtYesNoDialogYesButtonText">Ja</string>
    <string name="txtYesNoDialogNoButtonText">Nein</string>
    <string name="txtYesNoDialogText">Sollen alle Daten gelöscht werden?</string>
    <string name="txtMessageNoDelete">Daten werden nicht gelöscht</string>
    <string name="txtMessageYesDeleted">Daten wurden gelöscht</string>
    <string name="btnExportCaption">Save CSV</string>
    <string name="btnKeybdCaption">keybd</string>
    <string name="lblLagerort">Lagerort</string>
    <string name="rLagerort">Lagerort</string>
    <string name="preference_file_key">hsm.demo.scanandcount.prefs</string>
    <string name="bUseLagerort">true</string>
</resources>
