<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="scanandcount.MainActivity"
    android:background="#dbdbdb">


    <!-- Just to be able to control the keyboard visibility -->
    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/linearLayout">
        <requestFocus />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dataLabelText"
        android:id="@+id/dataLabel"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="24dp"
        android:enabled="true"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="36dp"
        android:textAlignment="center"
        android:layout_marginTop="6dp"
        android:id="@+id/txtData"
        android:background="#ffffff"
        android:layout_below="@+id/dataLabel"
        android:inputType="none"
        android:textStyle="bold"
        android:singleLine="true"
        android:selectAllOnFocus="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/numberLabelText"
        android:id="@+id/numberLabel"
        android:layout_below="@+id/txtData"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:textSize="24dp"
        android:enabled="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtQuantity"
        android:layout_below="@+id/numberLabel"
        android:layout_centerHorizontal="true"
        android:numeric="integer"
        android:layout_marginTop="6dp"
        android:background="#ffffff"
        android:focusableInTouchMode="true"
        android:textAlignment="center"
        android:textStyle="bold"
        android:singleLine="true"
        android:selectAllOnFocus="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnKeybdCaption"
        android:id="@+id/btnKeybd"
        android:layout_alignEnd="@+id/txtData"
        android:textSize="8dp"
        android:layout_alignBottom="@+id/dataLabel"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/txtQuantity"
        android:layout_toEndOf="@+id/linearLayout"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lblLagerort"
            android:id="@+id/lblLagerort"
            android:textSize="24dp"
            android:enabled="true"
            android:layout_below="@+id/btnCancel"
            android:layout_toEndOf="@+id/linearLayout" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="36dp"
            android:ems="10"
            android:id="@+id/txtLagerort"
            android:background="#ffffff"
            android:focusableInTouchMode="true"
            android:textAlignment="center"
            android:textStyle="bold"
            android:singleLine="true"
            android:selectAllOnFocus="true"
            android:layout_below="@+id/lblLagerort"
            android:layout_toStartOf="@id/lblLagerort"
            android:layout_alignEnd="@+id/btnKeybd"
            android:layout_marginTop="12dp" />
    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rLagerort"
        android:id="@+id/chkUseLagerort"
        android:layout_above="@+id/btnList"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/btnCancel"
        android:layout_marginBottom="12dp" />

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/btnCancelText"
        android:id="@+id/btnCancel"
        android:focusable="false"
        android:layout_alignTop="@+id/btnSave"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/btnSaveText"
        android:id="@+id/btnSave"
        android:textStyle="bold"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnListCaption"
        android:id="@+id/btnList"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnClearLabel"
        android:id="@+id/btnClear"
        android:layout_alignTop="@+id/btnList"
        android:layout_toEndOf="@+id/btnList" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnExportCaption"
        android:id="@+id/btnExport"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/btnClear" />


</RelativeLayout>
